package cn.thinkinjava.design.pattern.struct.proxy.frame;

/**
 * 具体主题
 *
 * @author qiuxianbao
 * @date : 2023/1/13
 */
public class RealSubject extends Subject {

    @Override
    public void request() {

    }
}
