package cn.thinkinjava.design.pattern.struct.proxy.frame;

/**
 * 抽象主题
 * @author qiuxianbao
 * @date : 2023/1/13
 */
public abstract class Subject {
    public abstract void request();
}
